# vape_1

./: CMakeLists.txt  prj.conf
components/lis2dh12/: lis2dh12.c  lis2dh12.h  lis2dh12_reg.h
components/mpu9250/: CMakeLists.txt  mpu9250.c  mpu9250.h
components/mpu9250/hal/: mpu9150_register_map.h  nrf_drv_mpu.c  nrf_drv_mpu.h
components/twi/: CMakeLists.txt  twi.c  twi.h
components/utils/: utils.c  utils.h
src/: main.c
